<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_roll_number"
            android:hint="@string/et_roll_number"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
        <EditText
            android:id="@+id/et_name"
            android:hint="@string/et_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
        <EditText
            android:id="@+id/et_cgpa"
            android:hint="@string/et_cgpa"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
        <TextView
            android:id="@+id/tv_degree"
            android:hint="@string/tv_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/sp_degrees"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/action_settings"
            android:spinnerMode="dropdown" />
        <TextView
            android:id="@+id/tv_gender"
            android:hint="@string/tv_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"/>
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>
        </RadioGroup>
        <TextView
            android:id="@+id/tv_dob"
            android:hint="@string/tv_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <DatePicker
            android:id="@+id/dp_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_career_interest"
            android:hint="@string/tv_career_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_academia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_academia"/>
            <CheckBox
                android:id="@+id/cb_industry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_industry"/>
            <CheckBox
                android:id="@+id/cb_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_business"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_save_record"
            android:text="@string/btn_save_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>